Add csrf protection where needed

--- a/templates/event_new.html
+++ b/templates/event_new.html
@@ -4,6 +4,7 @@
 <div class="w-screen h-screen flex justify-center items-center">
     <div class="px-4 py-4 bg-gray-50 rounded-lg">
         <form action="/event" method="post" class="flex flex-col space-y-4">
+            <input type="hidden" name="csrf" value="{{ session.csrf_token }}"></input>
             <div class="flex justify-between items-center space-x-4 pb-3 border-b">
                 <input type="text" id="title" name="title" placeholder="Event title" class="text-xl px-2 py-1 flex-grow border border-gray-200 rounded" />
                 <a href="/" class="flex-shrink-0 w-24 text-center cursor-pointer text-sm uppercase px-4 py-2 rounded text-red-800 bg-blue-50 hover:bg-blue-100">Cancel</a>
