--- a/templates/event_organisers.html
+++ b/templates/event_organisers.html
@@ -4,6 +4,7 @@
 <div class="w-screen h-screen flex">
     <div class="h-full w-96 p-4 flex flex-col space-y-3">
         <form action="/event/{{ event.id }}" method="post" class="flex flex-col space-y-3">
+            <input type="hidden" name="csrf" value="{{ session.csrf_token }}"></input>
             <div class="flex justify-between">
                 <a href="/" class="flex items-center space-x-2 text-blue-800">
                     <i class="fas fa-arrow-left"></i>
@@ -48,6 +49,7 @@
     <div class="h-full flex-grow flex flex-col items-center overflow-x-scroll">
 
         <form action="/event/{{ event.id }}/new-organiser">
+            <input type="hidden" name="csrf" value="{{ session.csrf_token }}"></input>
             <label for="new-organiser-username">
                 <span>New organiser:</span>
                 <input type="text" id="new-organiser-username"></input>
